--- a/app/app.css
+++ b/app/app.css
@@ -12,4 +12,10 @@ body {
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
+
+  margin: 0;
+  max-width: 100%;
+  height: 100%;
+  min-height: 100vh;
 }
+
